fix:index.html align header links

--- a/css/home.css
+++ b/css/home.css
@@ -133,7 +133,7 @@ footer > div {
 }
 
 .navbar {
-  padding: 1.5rem 1rem;
+  padding: 1.5rem 1rem !important;
 }
 
 .navbar-light .navbar-nav .nav-link {
